[gd_scene load_steps=11 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Crane3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Crane1.png" type="Texture" id=5]
[ext_resource path="res://LE_Marks.gd" type="Script" id=6]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Crane2.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "FADE6"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LE_Marks" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 1 )]

[node name="Panel" parent="." instance=ExtResource( 2 )]

[node name="StatsPanel" parent="." instance=ExtResource( 7 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "Here's some easy marks.

They don't pay too well but
they're pretty easy."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtons1" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BottomButtons1"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="BottomButtons1"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GraphicsPanel"]
position = Vector2( 62.0011, 35.019 )
frames = SubResource( 2 )

[node name="MarksChoiceContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 54.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBtn1" type="Button" parent="MarksChoiceContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 1"

[node name="OptionBtn2" type="Button" parent="MarksChoiceContainer"]
margin_top = 23.0
margin_right = 93.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 2"

[node name="OptionBtn3" type="Button" parent="MarksChoiceContainer"]
margin_top = 46.0
margin_right = 93.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 3"

[node name="InventoryPanel" parent="." instance=ExtResource( 3 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BottomButtons1/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomButtons1/Button6" to="." method="_on_Button6_pressed"]
